# nsequence

./: .gitignore  LICENSE.md  Makefile  README.md  conf.py  git  index.rst  pyproject.toml
__init__.py/: nsequence.py
docs/: code.rst  conf.py  index.rst
nsequence/: __init__.py  exceptions.py  nsequence.py  utils.py
nsequence/t/: test_geometric_sequence.py  test_nsequence.py  test_utils.py  utils.py
tests/: test_nsequence.py
